--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -92,7 +92,7 @@ body {
 
 #vNodes{
 	height: 10%;
-	widows: 100%;
+	width: 100%;
 	background-color: white; overflow-x: hidden; overflow-y: hidden;	
 }
 
@@ -102,9 +102,16 @@ body {
 	background-color: white; border: 1px solid black; overflow-x: hidden; overflow-y: scroll;
 }
 
-#progress_bar {
+#progress_bar.visible{
     width: 100%;
     position: relative;
+    visibility: visible;  
+}
+
+#progress_bar.invisible{
+    width: 100%;
+    position: relative;
+    visibility: hidden;
 }
 
 #progress_bar img.loading_circle {
@@ -133,20 +140,27 @@ body {
 
 #Commands ul li {
 	display: inline-block;
-	margin-left: 25px;
+	margin-left: 15px;
 	margin-top: 4px;
 	margin-bottom: 5px;
-	margin-right: 10px;
+	margin-right: 0px;
 }
 
 #Commands input{
-  font-size: 1.5em;
-}
-
-#Commands label{
   font-size: 1.2em;
 }
 
+#Commands label{
+  font-size: 1.0em;
+}
+
+#msg { padding: 5px; }
+ 
+#msg.valid{ border: 1px solid #0f0;  font-size: 0.5em; background-color: #efe; }
+ 
+#msg.error { border: 1px solid #f00; font-size: 0.5em; background-color: #fee; }     
+        
+        
 @media screen and (max-width: 768px) {
 	#title{
 		font-size: 2.5em;
@@ -173,11 +187,18 @@ body {
 		display: none;
 	}
 	
-
+	#footer {
+		display: none;
+	}
+	
 
 	#Commands input{
-	  font-size: 1.25em;
+	  font-size: 1.0em;
 	}
+
+	#Commands label{
+	  font-size: 0.8em;
+	}	
 
 }
 
@@ -193,11 +214,15 @@ body {
 	#Commands ul li {
 		margin-left: 15px;
 		margin-top: 1px;
-		margin-right: 5px;
+		margin-right: 0px;
 	}	
 	
 	#Commands input{
-	  font-size: 1.0em;
+	  font-size: 0.8em;
+	}	
+	
+	#Commands label{
+	  font-size: 0.7em;
 	}	
 	
 }
@@ -214,10 +239,14 @@ body {
 	#Commands ul li {
 		margin-left: 5px;
 		margin-top: 1px;
-		margin-right: 5px;
+		margin-right: 0px;
 	}	
 	
 	#Commands input{
-	  font-size: 1.0em;
+	  font-size: 0.8em;
+	}
+		
+	#Commands label{
+	  font-size: 0.7em;
 	}	
 }
