--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -148,6 +148,12 @@ body {
 
 #Commands input{
   font-size: 1.2em;
+  padding: 1px 2px 1px 2px;
+  margin: 2px 0px 0px 0px;
+}
+
+#Commands input.play{
+  width: 90px;
 }
 
 #Commands label{
@@ -188,10 +194,17 @@ body {
 		display: none;
 	}
 	
+	#Commands ul li {
+		margin-left: 7px;
+	}	
 
 	#Commands input{
-	  font-size: 1.0em;
+	  font-size: 0.9em;
 	}
+	
+	#Commands input.play{
+	  width: 75px;
+	}	
 
 	#Commands label{
 	  font-size: 0.8em;
@@ -209,17 +222,19 @@ body {
 	}
 	
 	#Commands ul li {
-		margin-left: 15px;
-		margin-top: 1px;
-		margin-right: 0px;
+		margin-left: 5px;
 	}	
 	
 	#Commands input{
-	  font-size: 0.8em;
-	}	
+	  font-size: 0.7em;
+	}
+	
+	#Commands input.play{
+	  width: 60px;
+	}		
 	
 	#Commands label{
-	  font-size: 0.7em;
+	  font-size: 0.6em;
 	}	
 	
 }
@@ -234,16 +249,18 @@ body {
 	}
 	
 	#Commands ul li {
-		margin-left: 5px;
-		margin-top: 1px;
-		margin-right: 0px;
+		margin-left: 4px;
 	}	
 	
 	#Commands input{
-	  font-size: 0.8em;
+	  font-size: 0.7em;
 	}
+	
+	#Commands input.play{
+	  width: 60px;
+	}		
 		
 	#Commands label{
-	  font-size: 0.7em;
+	  font-size: 0.6em;
 	}	
 }
