--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -189,13 +189,40 @@ body {
 #Commands a:visited {color:#000000;}
 #Commands a:active {color:#000000;} 
 
+/* it works for the dialog messages for error and information */
 #msg { padding: 5px; }
  
 #msg.valid{ border: 1px solid #0f0;  font-size: 0.5em; background-color: #efe; }
  
 #msg.error { border: 1px solid #f00; font-size: 0.5em; background-color: #fee; }     
      
-        
+
+/* it works for the content of the dialog */
+#maindialog{
+	display:none;
+	font-size: 1.0em;
+}
+
+#mcq.MCQcontainer{ 
+	background-color: white; 
+	border: 0px solid black; 
+	overflow-x: hidden; 
+	overflow-y: auto;
+}
+
+#mcq .MCQquestion{ 
+	font-size: 1.2em;
+}
+
+#mcq .MCQanswers{ 
+	font-size: 1.0em;
+}
+
+#mcq .MCQcomments{ 
+	font-size: 1.0em;
+}
+
+
 @media screen and (max-width: 768px) {
 	#title{
 		font-size: 2.5em;
