--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -147,31 +147,6 @@ body {
 }
 
 
-#ScenarioList {
-	width: 100%;
-}
-
-#ScenarioList ul{
-	width: 100%;
-	border-top: 1px solid #ccc;	
-}
-
-#ScenarioList ul li{
-	border-bottom: 1px solid #ccc;
-	line-height: 30px;	
-	display: list-item;
-	background: #eee;
-	cursor:pointer;
-}
-
-#ScenarioList ul li.ScenarioSelected {
-	background: #fff;	
-}
-
-#ScenarioList img{
-    display:block;
-    margin:auto;	
-}
 
 #Commands input{
   font-size: 1.2em;
@@ -219,18 +194,22 @@ body {
 /* it works for the dialog messages for error and information */
 #msg { padding: 5px; }
  
-#msg.valid{ border: 1px solid #0f0;  font-size: 0.5em; background-color: #efe; }
+#msg.valid{ border: 1px solid #0f0;  font-size: 0.8em; background-color: #efe; }
  
-#msg.error { border: 1px solid #f00; font-size: 0.5em; background-color: #fee; }     
+#msg.error { border: 1px solid #f00; font-size: 0.8em; background-color: #fee; }     
      
-#msg.comment { border: 1px solid #000; font-size: 0.8em; background-color: #fff; }
+#msg.comment { border: 1px solid #000; font-size: 1.0em; background-color: #fff; }
 
-/* it works for the content of the dialog */
+/* It works for the content of the dialog */
 #maindialog{
+	height: 100%;
+	width: 100%;
 	display:none;
 	font-size: 1.0em;
+	background-color: white; overflow-x: hidden; overflow-y: hidden;	
 }
 
+/* It works for the content of the MCQ dialog */
 #mcq.MCQcontainer{ 
 	background-color: white; 
 	border: 0px solid black; 
@@ -250,6 +229,52 @@ body {
 	font-size: 1.0em;
 }
 
+/* it works for the content of the Open Scenario Dialog */
+#DialogContainer{
+	height: 100%;
+	width: 100%;
+	background-color: white; overflow-x: hidden; overflow-y: hidden;
+	position: relative;	
+}
+
+#ScenarioFilter{
+	width: 100%;
+}
+
+#ScenarioListContainer {
+	height: 85%;
+	width: 100%;
+	background-color: white; overflow-x: hidden; overflow-y: auto;
+	position: relative;
+}
+
+#ScenarioList{
+	height: 100%;
+	width: 100%;
+	top:0px;
+}
+
+#ScenarioList ul{
+	width: 100%;
+	border-top: 1px solid #ccc;	
+}
+
+#ScenarioList ul li{
+	border-bottom: 1px solid #ccc;
+	line-height: 30px;	
+	display: list-item;
+	background: #eee;
+	cursor:pointer;
+}
+
+#ScenarioList ul li.ScenarioSelected {
+	background: #fff;	
+}
+
+#ScenarioList img{
+    display:block;
+    margin:auto;	
+}
 
 @media screen and (max-width: 768px) {
 	#title{
