--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -276,6 +276,20 @@ body {
     margin:auto;	
 }
 
+
+/* For the Scenario Data Dialog */
+
+#ScenarioDataDialog{
+	height: 100%;
+	display:block;
+    margin:auto;
+}
+
+#ScenarioDataDialog .ScenarioDataButton{
+  padding-top: 2.0em;
+}
+
+
 @media screen and (max-width: 768px) {
 	#title{
 		font-size: 2.5em;
