--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -128,6 +128,18 @@ body {
 	border: 1px dashed;
 }
 
+#vMessagesHeader{
+	height: 15%;
+	width: 100%;
+	background-color: white; overflow-x: hidden; overflow-y: hidden;	
+}
+
+#vMessagesBody{
+	height: 85%;
+	width: 100%;
+	background-color: white; overflow-x: hidden; overflow-y: scroll;	
+}
+
 #vCommand{
 	height: 9%;
 	clear: both;
