Show scenario comments

--- a/Valpopp/WebContent/css/valpopp.css
+++ b/Valpopp/WebContent/css/valpopp.css
@@ -85,7 +85,7 @@ body {
 
 #vScenario{
 	height: 100%;	
-	width: 70%;
+	width: 72%;
 	float: left;
 	border: 1px dashed;
 }
@@ -137,7 +137,7 @@ body {
 #vMessagesBody{
 	height: 85%;
 	width: 100%;
-	background-color: white; overflow-x: hidden; overflow-y: scroll;	
+	background-color: white; overflow-x: hidden; overflow-y: hidden;	
 }
 
 #vCommand{
@@ -157,8 +157,6 @@ body {
 	margin-bottom: 0px;
 	margin-right: 0px;
 }
-
-
 
 #Commands input{
   font-size: 1.2em;
@@ -324,10 +322,10 @@ body {
 		font-size: 2.5em;
 	}
 
+	/* This ruel stops working once the user hide and show the scenario comments sections */
+	/* Therefore it is necessary to solve this with javascript */
 	#vScenario{
-		width: 95%;
-		float: left;
-		border: 1px dashed;
+		width: 98%;
 	}
 	
 	#vNodes{
